api feedback method add
